--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>
         Some content.
         </h1>
+        <img src="https://octodex.github.com/images/vinyltocat.png">
     </body>
 </html>
