--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
         Some content.
         </h1>
         <img src="https://octodex.github.com/images/vinyltocat.png">
+        <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
     </body>
 </html>
